--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,13 +2,53 @@
 spring:
   application:
     name: item-service
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
+  cloud:
+    config:
+      uri: http://localhost:8888
+#  config:
+#    import: optional:configserver:
+
+#Declarar ip del servidor Eureka si esta en diferente maquina
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+  instance:
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+    status-page-url-path: /swagger-ui.html
+
+#hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 10000
+#ribbon:
+#  ConnectTimeout: 3000
+#  ReadTimeout: 10000
+
+resilience4j:
+  circuitbreaker:
+    configs:
+      defecto:
+        slidingWindowSize: 6
+        failureRateThreshold: 50
+        waitDurationInOpenState: 20s
+        permittedNumberOfCallsInHalfOpenState: 4
+        slowCallRateThreshold: 2
+
+      instances:
+        items:
+          base-config: defecto
+
+  timelimiter:
+    configs:
+      defecto:
+        timeoutDuration: 2s
+      instances:
+        items:
+          base-config: defecto
 
 server:
-  port: 9000
+  port: ${PORT:0}
 
 path:
   items: /api/items
-
-products-service:
-  ribbon:
-    listOfServers: localhost:8001,localhost:8002
