--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -3,10 +3,10 @@ spring:
   application:
     name: item-service
   profiles:
-    active: dev
+    active: prod
   cloud:
     config:
-      uri: http://localhost:8888
+      uri: http://config-server:8888
 
 management:
   endpoints:
